# genbo

./: Cargo.toml  README.md
crates/genbo-lib/: Cargo.toml
crates/genbo-lib/src/: lib.rs
crates/genbo-lib/tests/integration/: main.rs
genbo/: Cargo.toml
genbo/src/: main.rs
